--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nerdcore Enterprises</title>
+  <!-- Make sure the stylesheet name matches your actual CSS file -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="products.html">Shop</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <div class="container">
+    <!-- Sidebar / Vertical Menu -->
+    <nav class="sidebar">
+      <ul>
+        <li><a href="products.html">Shop</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-    <section>
-        <h2>Shop Our Products</h2>
-        <p><a href="products.html" class="button">Go to Store</a></p>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
-    </footer>
+    <!-- Main Content Area -->
+    <main class="main-content">
+      <h1>NERDCORE ENTERPRISES</h1>
+    </main>
+  </div>
 </body>
 </html>
