products and services update

--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nerdcore Enterprises</title>
-  <!-- Make sure the stylesheet name matches your actual CSS file -->
+  <title>NerdCore Enterprises</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <!-- Sidebar / Vertical Menu -->
-    <nav class="sidebar">
+  <!-- Header & Navigation -->
+  <header class="header">
+    <nav class="top-nav">
       <ul>
         <li><a href="products.html">Shop</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+  </header>
 
-    <!-- Main Content Area -->
-    <main class="main-content">
-      <h1>NERDCORE ENTERPRISES</h1>
-    </main>
-  </div>
+  <!-- Hero Section with Large Title -->
+  <main class="hero">
+    <h1>NERDCORE ENTERPRISES</h1>
+  </main>
+
+  <!-- Optional Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 NerdCore Enterprises. All rights reserved.</p>
+  </footer>
 </body>
 </html>
