--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
     <p>We’d love to hear from you! Feel free to reach out via email or Facebook:</p>
     <div class="contact-info">
       <p><strong>Email:</strong> 
-        <a href="mailto:info@nerdcoreenterprises.com">info@nerdcoreenterprises.com</a>
+        <a href="mailto:deynon.bright@nerdcoreenterprises.com">deynon.bright@nerdcoreenterprises.com</a>
       </p>
       <p><strong>Facebook:</strong> 
-        <a href="https://facebook.com/NerdCoreEnterprises" target="_blank" rel="noopener">
+        <a href="https://facebook.com/nerdcore.enterprises" target="_blank" rel="noopener">
           NerdCoreEnterprises
         </a>
       </p>
