--- a/services.html
+++ b/services.html
@@ -23,6 +23,9 @@
   <!-- Main Services Section -->
   <main class="services">
     <h1>Our Services</h1>
+    <p class="services-intro">
+      We offer a variety of custom services. Below are a few examples of services we offer catering to your nerdy needs. Contact us with your project goals to see how we can help!
+    </p>
     <div class="services-grid">
       <div class="service-card">
         <h2>3D Printing</h2>
@@ -30,11 +33,11 @@
       </div>
       <div class="service-card">
         <h2>Laser Engraving</h2>
-        <p>High-quality laser engraving for a variety of materials, perfect for personalized products and industrial applications.</p>
+        <p>High-quality laser engraving for a variety of materials, perfect for personalized products.</p>
       </div>
       <div class="service-card">
         <h2>Software Development</h2>
-        <p>Custom software solutions tailored to your needs, from mobile apps to enterprise systems, ensuring scalability and reliability.</p>
+        <p>Custom gaming and/or mobile software solutions tailored to your needs, from mobile apps to AR/XR, ensuring scalability and reliability.</p>
       </div>
     </div>
   </main>
