--- a/services.html
+++ b/services.html
@@ -24,7 +24,8 @@
   <main class="services">
     <h1>Our Services</h1>
     <p class="services-intro">
-      We offer a variety of custom services. Below are a few examples of services we offer catering to your nerdy needs. Contact us with your project goals to see how we can help!
+      We offer a variety of custom services. Below are a few examples of services we offer catering to your nerdy needs.<br><br>
+      Contact us with your project goals to see how we can help!
     </p>
     <div class="services-grid">
       <div class="service-card">
@@ -37,7 +38,7 @@
       </div>
       <div class="service-card">
         <h2>Software Development</h2>
-        <p>Custom gaming and/or mobile software solutions tailored to your needs, from mobile apps to AR/XR, ensuring scalability and reliability.</p>
+        <p>Custom mobile software and/or gaming solutions tailored to your needs, from mobile apps to AR/XR, ensuring scalability and reliability.</p>
       </div>
     </div>
   </main>
