--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav class="top-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Shop</a></li>
+        <li><a href="https://shop.nerdcoreenterprises.com">Shop</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
