--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <nav class="top-nav">
       <ul>
-        <li><a href="products.html">Shop</a></li>
+        <li><a href="https://shop.nerdcoreenterprises.com">Shop</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
