--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <!-- Header & Navigation -->
   <header class="header">
+    <!-- Mobile Navigation Toggle -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
     <nav class="top-nav">
       <ul>
         <li><a href="https://shop.nerdcoreenterprises.com">Shop</a></li>
