--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Fixed Header with Horizontal Navigation -->
+  <!-- Fixed Header with Mobile Navigation Toggle -->
   <header class="header">
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
     <nav class="top-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
