--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <p>We’d love to hear from you! Feel free to reach out via email or Facebook:</p>
     <div class="contact-info">
       <p><strong>Email:</strong> 
-        <a href="mailto:deynon.bright@nerdcoreenterprises.com">deynon.bright@nerdcoreenterprises.com</a>
+        <a href="mailto:nerdcoreenterprises@gmail.com">nerdcoreenterprises@gmail.com</a>
       </p>
       <p><strong>Facebook:</strong> 
         <a href="https://facebook.com/nerdcore.enterprises" target="_blank" rel="noopener">
