image and font update

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </nav>
   </header>
 
-  <!-- Hero Section with Large Title -->
+  <!-- Hero Section with Image -->
   <main class="hero">
-    <h1>NERDCORE ENTERPRISES</h1>
+    <img src="images/hero-image.png" alt="NerdCore Enterprises Hero" />
   </main>
 
   <!-- Optional Footer -->
