fixed for mobile

--- a/galactic_grayzone.html
+++ b/galactic_grayzone.html
@@ -37,7 +37,7 @@
     <!-- Large Main Image -->
     <div class="main-image-container">
       <img
-        id="gg-main-image"
+        id="main-image"
         class="main-image"
         src="images/gg/logo.png"
         alt="Galactic Grayzone Main Image"
